# Rosis-Video-Editor

./: .gitignore  CMakeLists.txt  Makefile  customGraphicsView.cpp  customGraphicsView.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  textinfobox.cpp  textinfobox.h  videoObj.cpp  videoObj.h
.cache/clangd/index/: main.cpp.45F333C9DB7239AA.idx  mainwindow.cpp.F1223FEFA71FA444.idx  mainwindow.h.7763A16C34A453E9.idx  ui_mainwindow.h.78AFE1D3EE3BF46A.idx
cmake/: FindPango.cmake
src/: customGraphicsView.cpp  customGraphicsView.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  textInformation.cpp  textInformation.h  textinfobox.cpp  textinfobox.h  textinfobox.ui  timeObj.h  timeline.h  videoObj.cpp  videoObj.h
